@@ -37,14 +37,22 @@ namespace Brainworxx\Krexx\Analyse\Callback\Iterate;
 use Brainworxx\Krexx\Analyse\Callback\AbstractCallback;
 use Brainworxx\Krexx\Analyse\Model;
 use Brainworxx\Krexx\Analyse\Code\Connectors;
+use Brainworxx\Krexx\Service\Factory\Pool;
 
 /**
  * Getter method analysis methods.
  *
  * @package Brainworxx\Krexx\Analyse\Callback\Iterate
  *
- * @uses array methodList
- *   The list of all reflection methods we are analysing
+ * @uses array normalGetter
+ *   The list of all reflection methods we are analysing, hosting the
+ *   get methods starting with 'get'
+ * @uses array isGetter
+ *   The list of all reflection methods we are analysing, hosting the
+ *   get methods starting with 'is'
+ * @uses array hasGetter
+ *   The list of all reflection methods we are analysing, hosting the
+ *   get methods starting with 'has'
  * @uses \ReflectionClass $ref
  *   A reflection class of the object we are analysing.
  * @uses object $data
@@ -61,6 +69,33 @@ class ThroughGetter extends AbstractCallback
     protected $deep = 0;
 
     /**
+     * Class for the comment analysis.
+     *
+     * @var \Brainworxx\Krexx\Analyse\comment\Methods
+     */
+    protected $commentAnalysis;
+
+    /**
+     * The current prefix we are analysing (get, is, has).
+     *
+     * @see $this->preparePropertyName()
+     *
+     * @var string
+     */
+    protected $currentPrefix;
+
+    /**
+     * Injects the pool and initializes the comment analysis.
+     *
+     * @param \Brainworxx\Krexx\Service\Factory\Pool $pool
+     */
+    public function __construct(Pool $pool)
+    {
+        parent::__construct($pool);
+        $this->commentAnalysis = $this->pool->createClass('Brainworxx\\Krexx\\Analyse\\Comment\\Methods');
+    }
+
+    /**
      * Try to get the possible result of all getter methods.
      *
      * @return string
@@ -68,12 +103,31 @@ class ThroughGetter extends AbstractCallback
      */
     public function callMe()
     {
+        $this->currentPrefix = 'get';
+        $output = $this->goThroughMethodList($this->parameters['normalGetter']);
+
+        $this->currentPrefix = 'is';
+        $output .= $this->goThroughMethodList($this->parameters['isGetter']);
+
+        $this->currentPrefix = 'has';
+        return $output . $this->goThroughMethodList($this->parameters['hasGetter']);
+    }
+
+    /**
+     * Iterating through a list of reflection methods.
+     *
+     * @param array $methodList
+     *   The list of methods we are going through, consisting of \ReflectionMethod
+     *
+     * @return string
+     *   The generated DOM.
+     */
+    protected function goThroughMethodList(array $methodList)
+    {
         $output = '';
-        /** @var \Brainworxx\Krexx\Analyse\comment\Methods $commentAnalysis */
-        $commentAnalysis = $this->pool->createClass('Brainworxx\\Krexx\\Analyse\\Comment\\Methods');
 
         /** @var \ReflectionMethod $reflectionMethod */
-        foreach ($this->parameters['methodList'] as $reflectionMethod) {
+        foreach ($methodList as $reflectionMethod) {
             // Back to level 0, we reset the deep counter.
             $this->deep = 0;
 
@@ -81,7 +135,7 @@ class ThroughGetter extends AbstractCallback
             // 1.) We have an actual value
             // 2.) We got NULL as a value
             // 3.) We were unable to get any info at all.
-            $comments = nl2br($commentAnalysis->getComment($reflectionMethod, $this->parameters['ref']));
+            $comments = nl2br($this->commentAnalysis->getComment($reflectionMethod, $this->parameters['ref']));
 
             /** @var Model $model */
             $model = $this->pool->createClass('Brainworxx\\Krexx\\Analyse\\Model')
@@ -241,11 +295,11 @@ class ThroughGetter extends AbstractCallback
     {
          // Get the name and remove the 'get' or the '_get'.
         $getterName = $reflectionMethod->getName();
-        if (strpos($getterName, 'get') === 0) {
+        if (strpos($getterName, $this->currentPrefix) === 0) {
             $getterName = substr($getterName, 3);
         }
-        
-        if (strpos($getterName, '_get') === 0) {
+
+        if (strpos($getterName, '_' . $this->currentPrefix) === 0) {
             $getterName = substr($getterName, 4);
         }
 
