@@ -1,4 +1,5 @@
 2.4.1 dev
+- Added 'is' and 'has' to the getter analysis.
 - Bugfix: The position of the search field of the hans skin is now
   calculated correct when the viewport is not on top.
 - Bugfix: The scroll container detection of the hans skin works
